manila: tag ocata-em
Apply "ocata-em" tag to the final ocata
release putting stable/ocata branch into
extended maintenance mode [1][2].

[1] https://docs.openstack.org/project-team-guide/stable-branches.html#extended-maintenance
[2] https://governance.openstack.org/tc/resolutions/20180301-stable-branch-eol.html

Change-Id: I4f8932fff07d1ead9f13fd49aec7e7a5c245ccd3

--- a/deliverables/ocata/manila.yaml
+++ b/deliverables/ocata/manila.yaml
@@ -41,5 +41,9 @@ releases:
     projects:
       - repo: openstack/manila
         hash: 2ae3ae7f9f54d2ac9a2ec039842228ec1afeafe7
+  - version: ocata-em
+    projects:
+      - repo: openstack/manila
+        hash: 2ae3ae7f9f54d2ac9a2ec039842228ec1afeafe7
 repository-settings:
   openstack/manila: {}
