[rally] Release rally-openstack 1.3.0
Change-Id: I4ee9a25bd4fb06985292099f6dd8b46bcc503e98

--- a/deliverables/_independent/rally-openstack.yaml
+++ b/deliverables/_independent/rally-openstack.yaml
@@ -17,5 +17,9 @@ releases:
     projects:
       - repo: openstack/rally-openstack
         hash: 79c8d39468e8d41acc1406cf39568d59db4ba308
+  - version: 1.3.0
+    projects:
+      - repo: openstack/rally-openstack
+        hash: 3855100cc2db45a872b7717f062a890fb7ca487e
 repository-settings:
   openstack/rally-openstack: {}
