--- a/deliverables/queens/cinder.yaml
+++ b/deliverables/queens/cinder.yaml
@@ -41,6 +41,10 @@ releases:
       - hash: 24782fa855db8c7db6d8d672b13d53f1f06a8f73
         repo: openstack/cinder
     version: 12.0.3
+  - projects:
+      - hash: 8b1aa5f99b94c6bf8119009d5d1ca122e274c43b
+        repo: openstack/cinder
+    version: 12.0.4
 cycle-highlights:
   - 'Support for attaching a single Cinder volume to multile VM instances.'
   - 'Add ability to report backend state in service list.'
