Monasca Perister: Release stable/queens 1.10.1
This closes the Story referenced below by including a bugfix in the
latest release of Monasca Persister.

Change-Id: I233c5aa9530080098bf11d260e335f1fe3738204
Story: 2003931
Task: 26840

--- a/deliverables/queens/monasca-persister.yaml
+++ b/deliverables/queens/monasca-persister.yaml
@@ -16,6 +16,10 @@ releases:
       - hash: 97e26fa5540e290cf0d512c9e72bcbd62a304d04
         repo: openstack/monasca-persister
     version: 1.10.0
+  - projects:
+      - hash: 88314e053ac859aed8765536f6eacd4f36d26527
+        repo: openstack/monasca-persister
+    version: 1.10.1
 branches:
   - location: 1.10.0
     name: stable/queens
