--- a/tox.ini
+++ b/tox.ini
@@ -66,7 +66,7 @@ deps =
   -r{toxinidir}/requirements.txt
   -r{toxinidir}/doc/requirements.txt
 commands =
-  sphinx-build -a -E -W -d doc/build/doctrees -b html doc/source doc/build/html
+  sphinx-build -v -a -E -W -d doc/build/doctrees -b html doc/source doc/build/html
   whereto {toxinidir}/doc/source/_extra/.htaccess {toxinidir}/doc/test/redirect-tests.txt
 
 [flake8]
