Oslo releases for 2018-10-9
Change-Id: I224ab4d8034fdc722fafeb5aab7e88e3c55ded30

--- a/deliverables/stein/oslo.config.yaml
+++ b/deliverables/stein/oslo.config.yaml
@@ -17,3 +17,7 @@ releases:
         hash: 7072a7552dcb58a60d08c73c1d002fdf1c5a6202
         repo: openstack/oslo.config
     version: 6.5.1
+  - projects:
+      - hash: ae7dbd939f76d84c0e4ee479f1c82aa4925d6e95
+        repo: openstack/oslo.config
+    version: 6.6.0
