--- a/deliverables/stein/oslo.messaging.yaml
+++ b/deliverables/stein/oslo.messaging.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 95b487ba6bd62dca73908bed67b6dffcb5331674
         repo: openstack/oslo.messaging
     version: 9.0.0
+  - projects:
+      - hash: 16fea5b368237b3c4a917b0785204db26eee8c19
+        repo: openstack/oslo.messaging
+    version: 9.0.1
