--- a/deliverables/stein/oslo.policy.yaml
+++ b/deliverables/stein/oslo.policy.yaml
@@ -17,3 +17,7 @@ releases:
         hash: cef105744d80023eed5ec7392f31e073f38ea765
         repo: openstack/oslo.policy
     version: 1.39.1
+  - projects:
+      - hash: feac3dcbfeef8e1d28ff40e2c3df9bf36d88bc9f
+        repo: openstack/oslo.policy
+    version: 1.40.0
