--- a/deliverables/stein/oslo.utils.yaml
+++ b/deliverables/stein/oslo.utils.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 5b7c99bbc514f6a9a80d338bd10cd7116d81dd77
         repo: openstack/oslo.utils
     version: 3.37.0
+  - projects:
+      - hash: 6e0b90be22ccd1d22f937cb16128875a2e28746f
+        repo: openstack/oslo.utils
+    version: 3.37.1
