--- a/deliverables/stein/osprofiler.yaml
+++ b/deliverables/stein/osprofiler.yaml
@@ -17,3 +17,7 @@ releases:
         hash: 2b4786b5cc819c5d321d97e3cf9e1d5f24ebdb97
         repo: openstack/osprofiler
     version: 2.4.1
+  - projects:
+      - hash: e6c5f57f13334fee04f4cbf1e9c7e98050009f3b
+        repo: openstack/osprofiler
+    version: 2.5.0
