--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -175,5 +175,9 @@ releases:
       - hash: e12ecf7c77babd935cb67f3db50e64c5df5611ab
         repo: openstack/reno
     version: 2.11.1
+  - projects:
+      - hash: 9f866b35a16e01cea06deb73006fa2e55f30ea51
+        repo: openstack/reno
+    version: 2.11.2
 repository-settings:
   openstack/reno: {}
