--- a/deliverables/stein/ironic-lib.yaml
+++ b/deliverables/stein/ironic-lib.yaml
@@ -17,3 +17,7 @@ releases:
         hash: 712da6c465e8794b3575b34a6eb1c5d3061a9b44
         repo: openstack/ironic-lib
     version: 2.15.1
+  - projects:
+      - hash: dd7e1fec83a74b6f3675d2417d5a03ff0f4f6533
+        repo: openstack/ironic-lib
+    version: 2.16.0
