Branch release-test stable/rocky
Change-Id: I401728c940c6556113dd189e50cea409431de14f
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/rocky/release-test.yaml
+++ b/deliverables/rocky/release-test.yaml
@@ -47,3 +47,6 @@ releases:
       - hash: 3da9679d9b12e2808ce9d073117e93d40ce05da3
         repo: openstack/release-test
     version: 1.1.0
+branches:
+  - location: 1.1.0
+    name: stable/rocky
