--- a/deliverables/rocky/puppet-aodh.yaml
+++ b/deliverables/rocky/puppet-aodh.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 3a57c15d37db34c67e37c5ce0ba372289ee2a0f6
         repo: openstack/puppet-aodh
     version: 13.3.0
+  - projects:
+      - hash: 013e80fe1860c38659d4ddf7af8d08339a6ed9c7
+        repo: openstack/puppet-aodh
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
