--- a/deliverables/rocky/puppet-barbican.yaml
+++ b/deliverables/rocky/puppet-barbican.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: c06d5dbe4b571bf6962bf9608cbcca238442870d
         repo: openstack/puppet-barbican
     version: 13.3.0
+  - projects:
+      - hash: 2c3dc778504c18695792203e308e74113ae81ba9
+        repo: openstack/puppet-barbican
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
