--- a/deliverables/rocky/puppet-ceilometer.yaml
+++ b/deliverables/rocky/puppet-ceilometer.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: ef9c82f4ad7eea9a731196525b04d61c5115d389
         repo: openstack/puppet-ceilometer
     version: 13.3.0
+  - projects:
+      - hash: 4f7b0bf08d3b37924a439a7c9d182b048067f8fc
+        repo: openstack/puppet-ceilometer
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
