--- a/deliverables/rocky/puppet-cinder.yaml
+++ b/deliverables/rocky/puppet-cinder.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 6394ccb22f76a346026042de04d4d0ca7f2f0de0
         repo: openstack/puppet-cinder
     version: 13.3.0
+  - projects:
+      - hash: 25b1ba399307deefced8d6ed404e1c91ff8ec9e1
+        repo: openstack/puppet-cinder
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
