--- a/deliverables/rocky/puppet-congress.yaml
+++ b/deliverables/rocky/puppet-congress.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: ab8a734de2602232a1bb46c8861ae5ea6d4892b5
         repo: openstack/puppet-congress
     version: 13.3.0
+  - projects:
+      - hash: 4202ec72eec1cbc0c00a4bbe4c6dfc05b18d6b97
+        repo: openstack/puppet-congress
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
