--- a/deliverables/rocky/puppet-glance.yaml
+++ b/deliverables/rocky/puppet-glance.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 7a6e865e7fca5956c4ace19aa963c0ef133bd219
         repo: openstack/puppet-glance
     version: 13.3.0
+  - projects:
+      - hash: 8c75648f02b4430ad872a654e30e86b6547e5845
+        repo: openstack/puppet-glance
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
