--- a/deliverables/rocky/puppet-glare.yaml
+++ b/deliverables/rocky/puppet-glare.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 17b1c62b922fa780f4cc2648ef130610d8c54738
         repo: openstack/puppet-glare
     version: 2.3.0
+  - projects:
+      - hash: 28c69354c5cf8f06f435f38c340be4864759ba5e
+        repo: openstack/puppet-glare
+    version: 2.3.1
 branches:
   - location: 2.3.0
     name: stable/rocky
