--- a/deliverables/rocky/puppet-gnocchi.yaml
+++ b/deliverables/rocky/puppet-gnocchi.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 37d7e1f0553d4c6909b10a3d1321ac134c263443
         repo: openstack/puppet-gnocchi
     version: 13.3.0
+  - projects:
+      - hash: 4b95b4b64f7ca5642a71d0a395b5907d85479d1a
+        repo: openstack/puppet-gnocchi
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
