--- a/deliverables/rocky/puppet-ironic.yaml
+++ b/deliverables/rocky/puppet-ironic.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 516b4e99e356a3225ab674ef042544dfa3484dbb
         repo: openstack/puppet-ironic
     version: 13.3.0
+  - projects:
+      - hash: d85f830a3bf7f059baa9364b89637eba20dc3a94
+        repo: openstack/puppet-ironic
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
