--- a/deliverables/rocky/puppet-keystone.yaml
+++ b/deliverables/rocky/puppet-keystone.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: ec7748e561c550e27c7051d3b79bd768603843d0
         repo: openstack/puppet-keystone
     version: 13.3.0
+  - projects:
+      - hash: 08b3b47e33ebe2904ff602dd57d14985c564f085
+        repo: openstack/puppet-keystone
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
