--- a/deliverables/rocky/puppet-magnum.yaml
+++ b/deliverables/rocky/puppet-magnum.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: fee68d28871dc9278fe55f537cb05e6e4955c4be
         repo: openstack/puppet-magnum
     version: 13.3.0
+  - projects:
+      - hash: 066103382062f554f883fe54e0e4bae3ccb1398d
+        repo: openstack/puppet-magnum
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
