--- a/deliverables/rocky/puppet-manila.yaml
+++ b/deliverables/rocky/puppet-manila.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 0a2687ab87649e5d6d511fe3c5b39e6ed15863fe
         repo: openstack/puppet-manila
     version: 13.3.0
+  - projects:
+      - hash: f7a4e764efa04f80b6f0b93e2666ad6bec080202
+        repo: openstack/puppet-manila
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
