--- a/deliverables/rocky/puppet-monasca.yaml
+++ b/deliverables/rocky/puppet-monasca.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 6e55416d29e273342a2d6f2c658d8e6a17d0f852
         repo: openstack/puppet-monasca
     version: 2.3.0
+  - projects:
+      - hash: e5212494ef136cfceeff152305ac9dbdd353b07a
+        repo: openstack/puppet-monasca
+    version: 2.3.1
 branches:
   - location: 2.3.0
     name: stable/rocky
