--- a/deliverables/rocky/puppet-murano.yaml
+++ b/deliverables/rocky/puppet-murano.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 99737fdf9231a2315adeab80a6ec74124d641a8c
         repo: openstack/puppet-murano
     version: 13.3.0
+  - projects:
+      - hash: e97a39ec13e97177faaa9c6b4aabd0b73efcb543
+        repo: openstack/puppet-murano
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
