--- a/deliverables/rocky/puppet-neutron.yaml
+++ b/deliverables/rocky/puppet-neutron.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: fee69de01ae5ddac3ee7ee0b37b33124c8aa874b
         repo: openstack/puppet-neutron
     version: 13.3.0
+  - projects:
+      - hash: b3e78bc5b4229f80d7856be0b2cb527b46c8debd
+        repo: openstack/puppet-neutron
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
