--- a/deliverables/rocky/puppet-octavia.yaml
+++ b/deliverables/rocky/puppet-octavia.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 7361bae076f842ebd7ac469aa3428cf49b8e722a
         repo: openstack/puppet-octavia
     version: 13.3.0
+  - projects:
+      - hash: e19b5906ef743989bf6ee1d83a2e3b275d5469dc
+        repo: openstack/puppet-octavia
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
