--- a/deliverables/rocky/puppet-openstack_extras.yaml
+++ b/deliverables/rocky/puppet-openstack_extras.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: ef1a93bfec8e9af722b16041f7b44f68d06c41bb
         repo: openstack/puppet-openstack_extras
     version: 13.3.0
+  - projects:
+      - hash: f8107522bc71ee1cfc68b68cb4deed3a61844d1f
+        repo: openstack/puppet-openstack_extras
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
