--- a/deliverables/rocky/puppet-openstacklib.yaml
+++ b/deliverables/rocky/puppet-openstacklib.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 5e9263597a42e1fe7b3b09da4e87f18a5fed6ac2
         repo: openstack/puppet-openstacklib
     version: 13.3.0
+  - projects:
+      - hash: cce1281bd66eb13329fb2d126fee7ae2e7072069
+        repo: openstack/puppet-openstacklib
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
