--- a/deliverables/rocky/puppet-ovn.yaml
+++ b/deliverables/rocky/puppet-ovn.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 8bce24515726e737b247559f7bc5ac4f4faeeef1
         repo: openstack/puppet-ovn
     version: 13.3.0
+  - projects:
+      - hash: 38e2e3354b1f53456e675322c0187f0c26da7f6c
+        repo: openstack/puppet-ovn
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
