--- a/deliverables/rocky/puppet-panko.yaml
+++ b/deliverables/rocky/puppet-panko.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 62f77f97f9a57b5a0078dbc13e3d6b44e3006a75
         repo: openstack/puppet-panko
     version: 13.3.0
+  - projects:
+      - hash: ccab5c95a5f8d801226774de987ca4c367cbcbf8
+        repo: openstack/puppet-panko
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
