--- a/deliverables/rocky/puppet-qdr.yaml
+++ b/deliverables/rocky/puppet-qdr.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 0cd64c1ff4e3458bfef639fb389c465f86c3a0d2
         repo: openstack/puppet-qdr
     version: 2.3.0
+  - projects:
+      - hash: b1e9f9677144ae819da70663924c303cffe038a1
+        repo: openstack/puppet-qdr
+    version: 2.3.1
 branches:
   - location: 2.3.0
     name: stable/rocky
