--- a/deliverables/rocky/puppet-rally.yaml
+++ b/deliverables/rocky/puppet-rally.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 212cabb4f901aeb9e1f06fd471f1de59b778c3bf
         repo: openstack/puppet-rally
     version: 1.3.0
+  - projects:
+      - hash: 095daaee73337d24f70e5f4d934733ca4b0a3728
+        repo: openstack/puppet-rally
+    version: 1.3.1
 branches:
   - location: 1.3.0
     name: stable/rocky
