--- a/deliverables/rocky/puppet-sahara.yaml
+++ b/deliverables/rocky/puppet-sahara.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 17087c989ac8187d854077fb29b93c8a1bfbfee3
         repo: openstack/puppet-sahara
     version: 13.3.0
+  - projects:
+      - hash: c1512ce1bfe203f6647382842385a3e14e7770a1
+        repo: openstack/puppet-sahara
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
