--- a/deliverables/rocky/puppet-swift.yaml
+++ b/deliverables/rocky/puppet-swift.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 998716b1d0e49a042a97d01c714788bf39e5f6ff
         repo: openstack/puppet-swift
     version: 13.3.0
+  - projects:
+      - hash: 1f3e6f6f5e965c261d09f4ce5ff713fff5a6b8c8
+        repo: openstack/puppet-swift
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
