--- a/deliverables/rocky/puppet-tacker.yaml
+++ b/deliverables/rocky/puppet-tacker.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: ff9448ca8a59e8212d7df7f22a6fa6e1df5d6013
         repo: openstack/puppet-tacker
     version: 13.3.0
+  - projects:
+      - hash: 25e85622f2bc41e75c48ba5044d0ce2e2ef70c05
+        repo: openstack/puppet-tacker
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
