--- a/deliverables/rocky/puppet-tempest.yaml
+++ b/deliverables/rocky/puppet-tempest.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: b6d053492ae0b7804bd9ae947ab3f04ce8eeca79
         repo: openstack/puppet-tempest
     version: 13.3.0
+  - projects:
+      - hash: 290d0432cb196b1e6155a34013c179e4b9903a58
+        repo: openstack/puppet-tempest
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
