--- a/deliverables/rocky/puppet-trove.yaml
+++ b/deliverables/rocky/puppet-trove.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: e65b323662fe77bcf250fdb7ed936e143bbe3ad3
         repo: openstack/puppet-trove
     version: 13.3.0
+  - projects:
+      - hash: 51bec045099d76f4bf40e643bf50e13d54e57552
+        repo: openstack/puppet-trove
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
