--- a/deliverables/rocky/puppet-vitrage.yaml
+++ b/deliverables/rocky/puppet-vitrage.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: a21be1ce9ce87cc995eef04233746bb43a29de38
         repo: openstack/puppet-vitrage
     version: 3.3.0
+  - projects:
+      - hash: 22b7789dcdad336ec34ea3aca96bb6c5693267c7
+        repo: openstack/puppet-vitrage
+    version: 3.3.1
 branches:
   - location: 3.3.0
     name: stable/rocky
