--- a/deliverables/rocky/puppet-watcher.yaml
+++ b/deliverables/rocky/puppet-watcher.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 0b2e4b1a11a95c2394c81d6833a3bae5f59da319
         repo: openstack/puppet-watcher
     version: 13.3.0
+  - projects:
+      - hash: a5da2e29c30982a5a805eb229ae6c92929e6c891
+        repo: openstack/puppet-watcher
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
