--- a/deliverables/rocky/puppet-zaqar.yaml
+++ b/deliverables/rocky/puppet-zaqar.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 96080c5b2c741450aa0e1c4d1119fdc18faea067
         repo: openstack/puppet-zaqar
     version: 13.3.0
+  - projects:
+      - hash: 1df93eb033a3e701f19d148afd38691e62fc0360
+        repo: openstack/puppet-zaqar
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
