--- a/deliverables/rocky/puppet-cloudkitty.yaml
+++ b/deliverables/rocky/puppet-cloudkitty.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 77515ec63336c336623cd4379b51b871eb06a103
         repo: openstack/puppet-cloudkitty
     version: 2.3.0
+  - projects:
+      - hash: 5c80963d4053887abccb5d23e040f8833da23fb7
+        repo: openstack/puppet-cloudkitty
+    version: 2.3.1
 branches:
   - location: 2.3.0
     name: stable/rocky
