--- a/deliverables/rocky/puppet-freezer.yaml
+++ b/deliverables/rocky/puppet-freezer.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: eb4592e0598acac5bb3a594f2a773cc49bff8c02
         repo: openstack/puppet-freezer
     version: 2.3.0
+  - projects:
+      - hash: 7754cd4516abe7376ee24378f436bc0b82b71b18
+        repo: openstack/puppet-freezer
+    version: 2.3.1
 branches:
   - location: 2.3.0
     name: stable/rocky
