--- a/deliverables/rocky/puppet-heat.yaml
+++ b/deliverables/rocky/puppet-heat.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 6ab242333581c932932184dd55eea4d8af673247
         repo: openstack/puppet-heat
     version: 13.3.0
+  - projects:
+      - hash: 1c5d32fc6557dd400dc27b1e9be977daae4d4acc
+        repo: openstack/puppet-heat
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
