--- a/deliverables/rocky/puppet-horizon.yaml
+++ b/deliverables/rocky/puppet-horizon.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: dd46ba1501fe0c44f90ac341703e2d9bd9d4048e
         repo: openstack/puppet-horizon
     version: 13.3.0
+  - projects:
+      - hash: c02fb6f467b88ef0b624338f2eb64dcbb61aeec0
+        repo: openstack/puppet-horizon
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
