--- a/deliverables/rocky/puppet-mistral.yaml
+++ b/deliverables/rocky/puppet-mistral.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 2ef4847d5e03b88c0494fd34710a263432d4f041
         repo: openstack/puppet-mistral
     version: 13.3.0
+  - projects:
+      - hash: 082509fed9b2d8d684a6eba239281dfd37b31b0f
+        repo: openstack/puppet-mistral
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
