--- a/deliverables/rocky/puppet-nova.yaml
+++ b/deliverables/rocky/puppet-nova.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: dad454f469d3b287ad86e8c6145644ca120d4c00
         repo: openstack/puppet-nova
     version: 13.3.0
+  - projects:
+      - hash: 8ab435c9e2c175917df9a226deb93ac0465ea4c4
+        repo: openstack/puppet-nova
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
