--- a/deliverables/rocky/puppet-oslo.yaml
+++ b/deliverables/rocky/puppet-oslo.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: ee8fc47cb2d8c94acf7decb5a70ff8b1e6edebde
         repo: openstack/puppet-oslo
     version: 13.3.0
+  - projects:
+      - hash: 7b0fee1278fec58577fddb3a829efc89270696d0
+        repo: openstack/puppet-oslo
+    version: 13.3.1
 branches:
   - location: 13.3.0
     name: stable/rocky
