--- a/deliverables/rocky/puppet-vswitch.yaml
+++ b/deliverables/rocky/puppet-vswitch.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: ed0e13c8867efceb51dfeece719c1c0dce98fbaf
         repo: openstack/puppet-vswitch
     version: 9.3.0
+  - projects:
+      - hash: 6a6eac8532710143cb7851ed5afd9b746ce0d6d6
+        repo: openstack/puppet-vswitch
+    version: 9.3.1
 branches:
   - location: 9.3.0
     name: stable/rocky
