--- a/deliverables/_independent/puppet-ceph.yaml
+++ b/deliverables/_independent/puppet-ceph.yaml
@@ -33,5 +33,9 @@ releases:
       - hash: c900116b8fbef30fe2c4c9e0d5b6dffa3e1ef9c2
         repo: openstack/puppet-ceph
     version: 2.5.1
+  - projects:
+      - hash: f8d3fd2eb6cb9cbb0f71717ca3be9501b46ca494
+        repo: openstack/puppet-ceph
+    version: 2.5.2
 repository-settings:
   openstack/puppet-ceph: {}
