--- a/deliverables/_independent/masakari-monitors.yaml
+++ b/deliverables/_independent/masakari-monitors.yaml
@@ -11,5 +11,9 @@ releases:
       - repo: openstack/masakari-monitors
         hash: 41653bc9535b2eef278153b59b6a662b6ee1083d
         tarball-base: masakari-monitors
+  - projects:
+      - hash: 3ffd576b7959a90fcebabd5471ff4d6f5a619b3c
+        repo: openstack/masakari-monitors
+    version: 5.1.0
 repository-settings:
   openstack/masakari-monitors: {}
