Final Rocky rc for OpenStack-Ansible
This will be the final Rocky RC for OSA.

Change-Id: Icecaf91b22b10e67cd5aa9ddef87d3bc05030d16

--- a/deliverables/rocky/openstack-ansible.yaml
+++ b/deliverables/rocky/openstack-ansible.yaml
@@ -151,6 +151,10 @@ releases:
       - hash: 090a76b7e4d98d28d3248ae355916dd152f624d4
         repo: openstack/openstack-ansible
     version: 18.0.0.0rc3
+  - projects:
+      - hash: 6aa831eb43b5cc053a211e79ae1312e08961837e
+        repo: openstack/openstack-ansible
+    version: 18.0.0.0rc4
 branches:
   - location: 18.0.0.0rc1
     name: stable/rocky
