Oslo releases for 2018-10-15
Change-Id: Ife16997e2ecd8bef92ad38f85814c61273f9c8af

--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -108,5 +108,9 @@ releases:
       - hash: 97e343c0cfe03e5d09a810a0e9f1f239fd76233f
         repo: openstack-dev/pbr
     version: 4.3.0
+  - projects:
+      - hash: 73a763d1e3cb2f00c2dc4fbfecfab487f9698818
+        repo: openstack-dev/pbr
+    version: 5.0.0
 repository-settings:
   openstack-dev/pbr: {}
