--- a/deliverables/stein/oslo.config.yaml
+++ b/deliverables/stein/oslo.config.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: ae7dbd939f76d84c0e4ee479f1c82aa4925d6e95
         repo: openstack/oslo.config
     version: 6.6.0
+  - projects:
+      - hash: d2ee0bf4069aea13c36599572bb38d0ed10966bb
+        repo: openstack/oslo.config
+    version: 6.6.1
