--- a/deliverables/stein/oslo.messaging.yaml
+++ b/deliverables/stein/oslo.messaging.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 16fea5b368237b3c4a917b0785204db26eee8c19
         repo: openstack/oslo.messaging
     version: 9.0.1
+  - projects:
+      - hash: 0410bcbf543a589f19eb145c2cc34852e24d2e5e
+        repo: openstack/oslo.messaging
+    version: 9.1.0
