--- a/deliverables/queens/shade.yaml
+++ b/deliverables/queens/shade.yaml
@@ -30,6 +30,10 @@ releases:
       - hash: 53f2766bdd3c82c4f0e94dd1df4b871cd11e01b5
         repo: openstack-infra/shade
     version: 1.27.1
+  - projects:
+      - hash: 2fe63a4d74dcff34f7a0dc90ec65f3e0cc0bf596
+        repo: openstack-infra/shade
+    version: 1.27.2
 branches:
   - name: stable/queens
     location: 1.26.0
