--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -176,5 +176,9 @@ releases:
       - hash: fe777233f0f3c10e3715cd820bcdeec2165db97a
         repo: openstack/openstackdocstheme
     version: 1.25.1
+  - projects:
+      - hash: 4ed01cd69c1535cfa64befac5c00f016db9b5eb5
+        repo: openstack/openstackdocstheme
+    version: 1.26.0
 repository-settings:
   openstack/openstackdocstheme: {}
