--- a/deliverables/rocky/horizon.yaml
+++ b/deliverables/rocky/horizon.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: 0aa126ddd073c9c4774ec82308283dac4ad09460
         repo: openstack/horizon
     version: 14.0.0
+  - version: 14.0.1
+    projects:
+      - repo: openstack/horizon
+        hash: 19865eec5bc4a5a0ee402a55295dda2e52c2422c
 repository-settings:
   openstack/horizon: {}
 branches:
