--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -180,5 +180,9 @@ releases:
       - hash: 4ed01cd69c1535cfa64befac5c00f016db9b5eb5
         repo: openstack/openstackdocstheme
     version: 1.26.0
+  - projects:
+      - hash: 47908ab95858e02114738801799b5248a84b30be
+        repo: openstack/openstackdocstheme
+    version: 1.27.0
 repository-settings:
   openstack/openstackdocstheme: {}
