--- a/deliverables/stein/python-zunclient.yaml
+++ b/deliverables/stein/python-zunclient.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/python-zunclient
         hash: b62af4dd69c77440ff948388df90514e7dcdf635
+  - version: 3.1.0
+    projects:
+      - repo: openstack/python-zunclient
+        hash: 5b9b737d13780abaed62ebecf54a78be31217262
 repository-settings:
   openstack/python-zunclient: {}
