--- a/deliverables/rocky/kolla-ansible.yaml
+++ b/deliverables/rocky/kolla-ansible.yaml
@@ -29,3 +29,8 @@ releases:
       - hash: 6b372d3b751c8dff9e806d77e858b9224118753a
         repo: openstack/kolla-ansible
     version: 7.0.0.0rc3
+  - diff-start: 6.0.0.0rc1
+    projects:
+      - hash: 6b372d3b751c8dff9e806d77e858b9224118753a
+        repo: openstack/kolla-ansible
+    version: 7.0.0
