Kolla deliverables rc3
Change-Id: I5c4d456a1de0454591182adb950a956f98ed2021

--- a/deliverables/rocky/kolla-ansible.yaml
+++ b/deliverables/rocky/kolla-ansible.yaml
@@ -25,3 +25,7 @@ releases:
       - hash: fa7fbc1776e0bf9a79f46df49a6794bab5d277d3
         repo: openstack/kolla-ansible
     version: 7.0.0.0rc2
+  - projects:
+      - hash: 6b372d3b751c8dff9e806d77e858b9224118753a
+        repo: openstack/kolla-ansible
+    version: 7.0.0.0rc3
