--- a/deliverables/stein/openstacksdk.yaml
+++ b/deliverables/stein/openstacksdk.yaml
@@ -9,5 +9,9 @@ releases:
       - hash: ec90fb64020bf41b5935bb78a62f323958c742fe
         repo: openstack/openstacksdk
     version: 0.18.0
+  - projects:
+      - hash: 448cda91e3ea2a9234b150ad6bfd5228472212ed
+        repo: openstack/openstacksdk
+    version: 0.18.1
 repository-settings:
   openstack/openstacksdk: {}
