--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -184,5 +184,9 @@ releases:
       - hash: 47908ab95858e02114738801799b5248a84b30be
         repo: openstack/openstackdocstheme
     version: 1.27.0
+  - projects:
+      - hash: a23e1c455626c639c3f1a01bf5c0dd11401bc8e4
+        repo: openstack/openstackdocstheme
+    version: 1.27.1
 repository-settings:
   openstack/openstackdocstheme: {}
