Oslo releases for 2018-10-22
Change-Id: Ic6b89f81e71676bfc36d600de6d076053d93dde2

--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -112,5 +112,9 @@ releases:
       - hash: 73a763d1e3cb2f00c2dc4fbfecfab487f9698818
         repo: openstack-dev/pbr
     version: 5.0.0
+  - projects:
+      - hash: bd300d07ee016bf04b5da783fa696754b8a49af8
+        repo: openstack-dev/pbr
+    version: 5.1.0
 repository-settings:
   openstack-dev/pbr: {}
