--- a/deliverables/stein/oslo.config.yaml
+++ b/deliverables/stein/oslo.config.yaml
@@ -25,3 +25,7 @@ releases:
       - hash: d2ee0bf4069aea13c36599572bb38d0ed10966bb
         repo: openstack/oslo.config
     version: 6.6.1
+  - projects:
+      - hash: c09b80440a5b8055a67c36706e20ddd80110b4bf
+        repo: openstack/oslo.config
+    version: 6.6.2
