--- a/deliverables/stein/oslo.messaging.yaml
+++ b/deliverables/stein/oslo.messaging.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: 0410bcbf543a589f19eb145c2cc34852e24d2e5e
         repo: openstack/oslo.messaging
     version: 9.1.0
+  - projects:
+      - hash: 92b4080654b9ecb68250905e45eec65f41e5b161
+        repo: openstack/oslo.messaging
+    version: 9.1.1
