--- a/deliverables/stein/oslo.policy.yaml
+++ b/deliverables/stein/oslo.policy.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: feac3dcbfeef8e1d28ff40e2c3df9bf36d88bc9f
         repo: openstack/oslo.policy
     version: 1.40.0
+  - projects:
+      - hash: fe898122c8cbf8b00e35307c719a04724bfecf46
+        repo: openstack/oslo.policy
+    version: 1.40.1
