--- a/deliverables/stein/tooz.yaml
+++ b/deliverables/stein/tooz.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: fa152a1606caf845890412931c6c4319d30d2612
         repo: openstack/tooz
     version: 1.63.0
+  - projects:
+      - hash: 77f6bc516f06e5b2d206a18dff302ca0ecd91bf4
+        repo: openstack/tooz
+    version: 1.63.1
