--- a/deliverables/stein/oslo.cache.yaml
+++ b/deliverables/stein/oslo.cache.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 60d23a087619859ba13d750f1361f3b77b2afc40
         repo: openstack/oslo.cache
     version: 1.31.0
+  - projects:
+      - hash: 679cdeb15364b4faf4ea9ed44efa2775c3444a58
+        repo: openstack/oslo.cache
+    version: 1.31.1
