--- a/deliverables/rocky/cinder.yaml
+++ b/deliverables/rocky/cinder.yaml
@@ -33,6 +33,10 @@ releases:
       - hash: 41de06dcf6f1c84b6d4eb2f8d3b4f002d8c67f96
         repo: openstack/cinder
     version: 13.0.0
+  - projects:
+      - hash: c118e8f92c353b69201ccdf19b66b9057ae95005
+        repo: openstack/cinder
+    version: 13.0.1
 branches:
   - location: 13.0.0.0rc1
     name: stable/rocky
