--- a/deliverables/stein/sushy.yaml
+++ b/deliverables/stein/sushy.yaml
@@ -5,3 +5,8 @@ type: library
 release-model: cycle-with-intermediary
 repository-settings:
   openstack/sushy: {}
+releases:
+  - projects:
+      - hash: 817e77a115f63e58a617c36f3b02237ac3cd30c9
+        repo: openstack/sushy
+    version: 1.7.0
