--- a/deliverables/stein/python-vitrageclient.yaml
+++ b/deliverables/stein/python-vitrageclient.yaml
@@ -6,3 +6,8 @@ team: vitrage
 type: client-library
 repository-settings:
   openstack/python-vitrageclient: {}
+releases:
+  - projects:
+      - hash: d04c6617efae4f87664c436a1d7858de3fb0b3f5
+        repo: openstack/python-vitrageclient
+    version: 2.4.0
