--- a/deliverables/stein/python-cloudkittyclient.yaml
+++ b/deliverables/stein/python-cloudkittyclient.yaml
@@ -6,3 +6,8 @@ team: cloudkitty
 type: client-library
 repository-settings:
   openstack/python-cloudkittyclient: {}
+releases:
+  - projects:
+      - hash: 3b49fbd4d0f8bc549b355bfb63844a4147cb0b4e
+        repo: openstack/python-cloudkittyclient
+    version: 2.1.0
