--- a/deliverables/stein/python-blazarclient.yaml
+++ b/deliverables/stein/python-blazarclient.yaml
@@ -6,3 +6,8 @@ team: blazar
 type: client-library
 repository-settings:
   openstack/python-blazarclient: {}
+releases:
+  - projects:
+      - hash: 7a7461cf0265b8280df26574cd2ecfceb7cb346d
+        repo: openstack/python-blazarclient
+    version: 2.1.0
