--- a/deliverables/stein/os-win.yaml
+++ b/deliverables/stein/os-win.yaml
@@ -6,3 +6,8 @@ team: winstackers
 type: library
 repository-settings:
   openstack/os-win: {}
+releases:
+  - projects:
+      - hash: 5d7c91e627575001f8cc8da69028e135c1e21f91
+        repo: openstack/os-win
+    version: 4.1.0
