--- a/deliverables/stein/os-acc.yaml
+++ b/deliverables/stein/os-acc.yaml
@@ -7,3 +7,8 @@ type: library
 repository-settings:
   openstack/os-acc:
     pypi-name: os-acc
+releases:
+  - projects:
+      - hash: 0506812fff952bf8df0942cbe7d45a07d464ec38
+        repo: openstack/os-acc
+    version: 0.2.0
