--- a/deliverables/stein/keystonemiddleware.yaml
+++ b/deliverables/stein/keystonemiddleware.yaml
@@ -6,3 +6,8 @@ team: keystone
 type: library
 repository-settings:
   openstack/keystonemiddleware: {}
+releases:
+  - projects:
+      - hash: fc51082ef43e316bbfa65c16dd6483af1f2092e7
+        repo: openstack/keystonemiddleware
+    version: 5.3.0
