--- a/deliverables/stein/keystoneauth.yaml
+++ b/deliverables/stein/keystoneauth.yaml
@@ -8,6 +8,11 @@ releases:
         repo: openstack/keystoneauth
         tarball-base: keystoneauth1
     version: 3.11.0
+  - projects:
+      - hash: 72288d3b18e66da3e04c35f60ab43c916b92c59a
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.11.1
 team: keystone
 type: library
 repository-settings:
