--- a/deliverables/stein/paunch.yaml
+++ b/deliverables/stein/paunch.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: b22598c7617f8657d275626e3c52f8e88d58a9b5
         repo: openstack/paunch
     version: 4.0.0
+  - projects:
+      - hash: d3c83259bfe59ed6713c7b5f7bb34128f39aae24
+        repo: openstack/paunch
+    version: 4.1.0
