--- a/deliverables/stein/puppet-tripleo.yaml
+++ b/deliverables/stein/puppet-tripleo.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 3781e7e339eb38a723723660e3a1e22f91964907
         repo: openstack/puppet-tripleo
     version: 10.0.0
+  - projects:
+      - hash: fcadda0f8d7c533a7428575843dd34cff1d22b8e
+        repo: openstack/puppet-tripleo
+    version: 10.1.0
