--- a/deliverables/stein/python-tripleoclient.yaml
+++ b/deliverables/stein/python-tripleoclient.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 01eca26528466e8254533da3e882bf0944dbea41
         repo: openstack/python-tripleoclient
     version: 11.0.0
+  - projects:
+      - hash: 2f662a50d6f8f05523d365148d922cdd44e60f58
+        repo: openstack/python-tripleoclient
+    version: 11.1.0
