--- a/deliverables/stein/tripleo-heat-templates.yaml
+++ b/deliverables/stein/tripleo-heat-templates.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 051f4e0059c4b314754154b320270f59349d686d
         repo: openstack/tripleo-heat-templates
     version: 10.0.0
+  - projects:
+      - hash: 03ca0e5d31ba94aa4f3af0724df0ab657ab76c05
+        repo: openstack/tripleo-heat-templates
+    version: 10.1.0
