--- a/deliverables/stein/tripleo-ui.yaml
+++ b/deliverables/stein/tripleo-ui.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: f672e31b56e5f82cff52d7afd053f4e635c17abe
         repo: openstack/tripleo-ui
     version: 10.0.0
+  - projects:
+      - hash: 2ec97a2f8931c94a85f950fb609370f5f1bac85c
+        repo: openstack/tripleo-ui
+    version: 10.1.0
