--- a/deliverables/stein/tripleo-validations.yaml
+++ b/deliverables/stein/tripleo-validations.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 6cffa203170b2c200b4bc40e45c787e895a8eb7d
         repo: openstack/tripleo-validations
     version: 10.0.0
+  - projects:
+      - hash: c4bfaa0c44ce51911b1d6044e25617900156c260
+        repo: openstack/tripleo-validations
+    version: 10.1.0
