--- a/deliverables/stein/os-net-config.yaml
+++ b/deliverables/stein/os-net-config.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: f73505895bc438546d44e8b4853a10a516696b87
         repo: openstack/os-net-config
     version: 10.0.0
+  - projects:
+      - hash: a34e5b7cc1500694e0ac0a39dbcd506f2e446b87
+        repo: openstack/os-net-config
+    version: 10.1.0
