--- a/deliverables/stein/tripleo-common.yaml
+++ b/deliverables/stein/tripleo-common.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 3e61f4f08c719031dd2aff472afbad051ee48dcf
         repo: openstack/tripleo-common
     version: 10.0.0
+  - projects:
+      - hash: 7ff0d42c001e028f14b4d57a6471b3841830dbc5
+        repo: openstack/tripleo-common
+    version: 10.1.0
