--- a/deliverables/stein/tripleo-image-elements.yaml
+++ b/deliverables/stein/tripleo-image-elements.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: b421b6129b8afade2ee9128536435a18df3603e1
         repo: openstack/tripleo-image-elements
     version: 10.0.0
+  - projects:
+      - hash: aa19a7f92af8d7683b84221550f3850ceec85363
+        repo: openstack/tripleo-image-elements
+    version: 10.1.0
